# PalworldSaveEditor

./: .eslintrc.json  CNAME  LICENSE  README.md  asset-manifest.json  config-overrides.js  index.html  manifest.json  package-lock.json  package.json
public/: index.html
rust/: Cargo.toml
rust/src/: lib.rs
src/: App.css  App.js  index.css
src/components/: Dropper.js  RawEditor.js  VanillaJSONEditor.css  VanillaJSONEditor.js
src/components/libs/: Dropper.js  VanillaJSONEditor.js
src/libs/: Serializer.js  formatSize.js  save.js
static/css/: main.05cba8fc.css  main.05cba8fc.css.map  main.12f42206.css  main.12f42206.css.map  main.6d085013.css  main.6d085013.css.map  main.e9c4e812.css  main.e9c4e812.css.map  main.f04a4c35.css  main.f04a4c35.css.map
static/js/: main.0208d4d7.js  main.2ab3f788.js  main.3e8575ea.js  main.51ce5a28.js  main.5b58bf4c.js  main.6b533a68.js  main.7903ba9f.js  main.7ab78553.js  main.7e986514.js  main.8064dca0.js  main.8b8b85a7.js  main.aa36d978.js  main.bf35e8b4.js  main.c4192564.js  main.c6e809dd.js  main.caddee4a.js  main.cb6983dd.js  main.cb89b3ce.js  main.eae54b40.js  main.eae54b40.js.LICENSE.txt  main.fae65f7c.js
