[package]
name = "uesave-wasm"
version = "0.1.0"
authors = ["ieb <1@wa.vg>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.90"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }
uesave = { git = "https://github.com/iebb/uesave-rs.git" }
js-sys = "0.3.67"
serde_json = "1.0.111"

[dev-dependencies]
wasm-bindgen-test = "0.3.40"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
